--- a/slides/girona17/index.html
+++ b/slides/girona17/index.html
@@ -224,6 +224,7 @@
 					## Referencias
 					* Visor: http://fergonco.org/border-rampage/
 					* Código: https://github.com/fergonco/traffic-viewer/
+					* Presentación: http://fergonco.org/slides/girona17/
 					
 					Fernando González Cortés (http://fergonco.org/)
 				</section>
