--- a/slides/foss4gbe17/index.html
+++ b/slides/foss4gbe17/index.html
@@ -359,9 +359,10 @@ predict.glm(model, newdata = forecastDataset)</pre></li>
                     </ul>
 				</section>
 				<section>
-                    <h1>Thanks!</h1>
-                    <p>Slides --&gt; <a href="http://fergonco.org/slides/foss4gbe17/index.html">http://fergonco.org/slides/foss4gbe17/index.html</a>
+                    <h2>Thanks!</h2>
+                    <p>Slides --&gt; <a href="http://fergonco.org/slides/foss4gbe17/">http://fergonco.org/slides/foss4gbe17/</a>
                     <p>More details --&gt; <a href="http://fergonco.org/blog.html">http://fergonco.org/blog.html</a>
+                    <p><img style="border:none; box-shadow:none" src="images/logo_geomatico_big.png" class="stretch"></p>
 				</section>
 			</div>
 			<div style="position:absolute; bottom:15px; left:15px; margin-left:0px; z-index: 20">
